# Tech-blog

./: .staticrypt.json  README.md  Tech blog.Rproj  _quarto.yml  about.qmd  encrypt.r  index.qmd  posts.qmd  project.qmd
AI_create_code/: index.html
_site/: about.html  index.html  listings.json  search.json
brand/: _brand.yml  _google_brand.yml
docs/: about.html  index.html  listings.json  posts.html  project.html  search.json
docs/AI_create_code/: index.html
docs/posts/: index.html
docs/youtube_yt-dlp/: index.html
encrypted/: index.html
posts/AI_OCR/: index.qmd  index.quarto_ipynb  store.pckl  tt.quarto_ipynb
posts/AI_create_code/: index.qmd
posts/AI_podcast/: index.qmd
posts/AI_subtitles/: audio_txt.py  index.qmd
posts/CPUGPU/: CPU.html  Metal.html  OpenCL.html  index.qmd
posts/Classification Metrics/: index.qmd  index.quarto_ipynb
posts/GDP/: index.qmd
posts/LLM_model/: AI model.xlsx  index.qmd
posts/Rpackage/: index.qmd
posts/Streamlit/: index.qmd  index.quarto_ipynb
posts/TidyTuesday/: index.qmd
posts/api_with_httr2/: index.qmd
posts/copilot/: index.qmd  weather api.R
posts/data_transfer_with_pin/: index.qmd
posts/display_table/: index.qmd
posts/docker/: index.qmd  index.quarto_ipynb
posts/download yotube on iphone or ipad/: index.qmd
posts/edit video/: index.qmd  output.srt
posts/editor/: index.qmd  index.quarto_ipynb
posts/file_managment/: index copy.r  index.qmd
posts/gemini_cli/: index.qmd
posts/versioncontrolpython/: index.qmd  index.quarto_ipynb  pyproject.toml  test.py
youtube_yt-dlp/: index.html
(+173 files in other folders)
