[project]
name = "uv-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "siuba>=0.4.2",
]

[tool.uv.workspace]
members = ["example"]
